[gd_scene format=3 uid="uid://de53ltc0xgbu0"]

[ext_resource type="Script" uid="uid://b0wi4omjnf8xc" path="res://addons/sh_utils/debug/debug.gd" id="1_1uwqr"]
[ext_resource type="Script" uid="uid://c7viasqphqug3" path="res://addons/sh_utils/debug/debug_overlays.gd" id="2_rdi1l"]
[ext_resource type="Theme" uid="uid://crj5egtiaymc1" path="res://addons/sh_utils/debug/debug_theme.tres" id="2_txpwr"]

[sub_resource type="LabelSettings" id="LabelSettings_lvjdj"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Debug" type="Node" unique_id=1630132893]
script = ExtResource("1_1uwqr")

[node name="DebugOverlays" type="Control" parent="." unique_id=953363938]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_txpwr")
script = ExtResource("2_rdi1l")

[node name="DebugPerformanceOverlay" type="MarginContainer" parent="DebugOverlays" unique_id=286486308]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TabContainer" type="TabContainer" parent="DebugOverlays/DebugPerformanceOverlay" unique_id=1892008912]
layout_mode = 2
tab_alignment = 2
current_tab = 0
clip_tabs = false
all_tabs_in_front = true
tab_0/title = "1"
tab_1/title = "2"
tab_2/title = "3"
tab_3/title = "4"
tab_4/title = "5"

[node name="PerformanceLabel" type="Label" parent="DebugOverlays/DebugPerformanceOverlay/TabContainer" unique_id=1404040358]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "PerfMonitor"
label_settings = SubResource("LabelSettings_lvjdj")
horizontal_alignment = 2
metadata/_tab_index = 0
metadata/_tab_name = "1"

[node name="SysInfoLabel" type="Label" parent="DebugOverlays/DebugPerformanceOverlay/TabContainer" unique_id=1698656752]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "SysInfo"
label_settings = SubResource("LabelSettings_lvjdj")
horizontal_alignment = 2
metadata/_tab_index = 1
metadata/_tab_name = "2"

[node name="QuickActionsLabel" type="Label" parent="DebugOverlays/DebugPerformanceOverlay/TabContainer" unique_id=1751751415]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "QuckActions"
label_settings = SubResource("LabelSettings_lvjdj")
horizontal_alignment = 2
metadata/_tab_index = 2
metadata/_tab_name = "3"

[node name="TargetInspectorLabel" type="Label" parent="DebugOverlays/DebugPerformanceOverlay/TabContainer" unique_id=419996529]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "TargetInspector"
label_settings = SubResource("LabelSettings_lvjdj")
horizontal_alignment = 2
metadata/_tab_index = 3
metadata/_tab_name = "4"

[node name="SceneSwitchLabel" type="Label" parent="DebugOverlays/DebugPerformanceOverlay/TabContainer" unique_id=281806928]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "SceneSwitch"
label_settings = SubResource("LabelSettings_lvjdj")
horizontal_alignment = 2
metadata/_tab_index = 4
metadata/_tab_name = "5"
